fix z-index bug

--- a/side-nav/NavPanelGroup/nav-panel-group.scss
+++ b/side-nav/NavPanelGroup/nav-panel-group.scss
@@ -3,7 +3,7 @@
   position: absolute;
   top: 0;
   left: 180px;
-  z-index: 1;
+  z-index: 3;
   transition: top .25s ease;
 }
 .lg-side-nav-panel-group-ad {
